--- a/book/content/Appendix_3_Normalization.ipynb
+++ b/book/content/Appendix_3_Normalization.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "Normalization can mean a variety of slightly similar operations, not all of which can be discussed here. The aim of normalizing data is change its scale, so that it becomes directly comparable to other data. \n",
     "\n",
-    "Lets present here two classes of 7 students each, graded under different grading systems. Class A is graded from 0 to 10. Class be from 0 to 20. Which class has the highest grades?"
+    "Let us present here two classes of 7 students each, graded under different grading systems. Class A is graded from 0 to 10. Class be from 0 to 20. Which class has the highest grades?"
    ]
   },
   {
