--- a/book/content/Appendix_4_Vector_Scaling.ipynb
+++ b/book/content/Appendix_4_Vector_Scaling.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "$$ \\frac{v}{||v||} $$\n",
     "\n",
-    "The vector so modified conserves its direction, but its magnitude is \"standarized\" to 1. Compare the vectors presented earlier to the ones in red:"
+    "The vector so modified conserves its direction, but its magnitude is \"standardized\" to 1. Compare the vectors presented earlier to the ones in red:"
    ]
   },
   {
