--- a/book/content/Appendix_5_Plotting.ipynb
+++ b/book/content/Appendix_5_Plotting.ipynb
@@ -28,11 +28,11 @@
    "source": [
     "Plotting can be very relevant, or not so relevant, depending on the research task at hand. In small networks plotting can create powerful insights. The human mind can very rapidly grasp intuitive properties of a network by just looking at it, without making any calculation. However, it is often the case that large networks plotting leads to \"hairballs\" where nothing of interesting can be discerned. \n",
     "\n",
-    "High level plotting skills can -to a large extent- overcome this \"hairball\" problem, however such techniques are outside the scope of this work. At some point plotting becomes a skill in itself, and gets handed over to specialists, who are possibly not the same persons who are using network analysis to provide insight into the legal research questions. This book respects such division of labor, and thus presentation of plotting will remain basic. THat being said we will introduce *some* simple techniques that can help us tame hairballs somewhat. \n",
+    "High level plotting skills can -to a large extent- overcome this \"hairball\" problem, however such techniques are outside the scope of this work. At some point plotting becomes a skill in itself, and gets handed over to specialists, who are possibly not the same persons who are using network analysis to provide insight into the legal research questions. This book respects such division of labor, and thus presentation of plotting will remain basic. That being said we will introduce *some* simple techniques that can help us tame hairballs somewhat. \n",
     "\n",
-    "It perhaps should be noted that networkx does not excel as a plotting package. There are better options, and Gephi (discussed on Chapter 6) is more powerful, and takes a different approach altogether (it is not a tool based on coding, but on a graphical user interface). It is alwo work noting that networkx builds its plotting abilities on top of matplotlib, a widely used plotting library for python, that is more geared towards satisfying the needs of scientists than for making beautiful visualizations. Those looking for the latter need to look elsewhere.\n",
+    "It perhaps should be noted that networkx does not excel as a plotting package. There are better options, and Gephi (discussed on Chapter 6) is more powerful, and takes a different approach altogether (it is not a tool based on coding, but on a graphical user interface). It is also work noting that networkx builds its plotting abilities on top of matplotlib, a widely used plotting library for python, that is more geared towards satisfying the needs of scientists than for making beautiful visualizations. Those looking for the latter need to look elsewhere.\n",
     "\n",
-    "Lets start with a small plot that provides immediate insight into the netowkrk. Lets use a classic built in graph, the barbell graph. This looks precisely like the weight lifting instrument that bears the same name. Two heavy weights connected by a metal shaft. Just by visualizing it we can guess which node plays an important brokerage role in the network, such that if removed the network would be disconnected. We can also see that there are two clear communities. The two ends of the barbell. The barbell graph is not too far away from two kite graphs with the tails joined together.\n",
+    "Lets start with a small plot that provides immediate insight into the networkx. Let us use a classic built in graph, the barbell graph. This looks precisely like the weight lifting instrument that bears the same name. Two heavy weights connected by a metal shaft. Just by visualizing it we can guess which node plays an important brokerage role in the network, such that if removed the network would be disconnected. We can also see that there are two clear communities. The two ends of the barbell. The barbell graph is not too far away from two kite graphs with the tails joined together.\n",
     "\n",
     "Note that in the function below (the graph constructor) network is allows us to define how many nodes will be present in the \"plates\" of the barbell, and how many nodes will make up the staff. Here we have made some conservative choices."
    ]
@@ -91,7 +91,7 @@
    "source": [
     "\n",
     "\n",
-    "Before entering into that, lets have a look at the \"hairball\" phenomenon. Here we are going to look at the consumer protection cases data. As you can see, the default drawing function provides no insight whatsoever.\n",
+    "Before entering into that, let us have a look at the \"hairball\" phenomenon. Here we are going to look at the consumer protection cases data. As you can see, the default drawing function provides no insight whatsoever.\n",
     "\n",
     "Now "
    ]
@@ -296,7 +296,7 @@
    "source": [
     "We can see that for analytic purposes this was a bad decision. It is no longer transparent that the graph is two communities joined by a lonely node. However we can still to some extent see that node 6 is the one that connects the upper half, and lower half, of the network. \n",
     "\n",
-    "Other layouts may superimpose some nodes in order to reveal something about the stucture of the network."
+    "Other layouts may superimpose some nodes in order to reveal something about the structure of the network."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, because networkx builds plots in layers, it is possible to give different nodes or edges different treatment, perhaps changing their color, or dropping them out altogether.  For example, here we can node 6, the sole node of the staff part of the barbell stand out by giving it ia different color.  "
+    "Now, because networkx builds plots in layers, it is possible to give different nodes or edges different treatment, perhaps changing their color, or dropping them out altogether.  For example, here we can node 6, the sole node of the staff part of the barbell stand out by giving it a different color.  "
    ]
   },
   {
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another possibility is to filter the hairball network into one of more manageable size. Here the strategy is to keep only the top 40 nodes in terms of in-degree. Lets present this step-by-step. \n",
+    "Another possibility is to filter the hairball network into one of more manageable size. Here the strategy is to keep only the top 40 nodes in terms of in-degree. Let us present this step-by-step. \n",
     "\n",
     "First we get the top40 nodes in terms of degree."
    ]
