--- a/book/content/Chapter_2_Key_Concepts.ipynb
+++ b/book/content/Chapter_2_Key_Concepts.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "In order to provide an insightful visual representation of network it is necessary to order nodes in space in a way that makes sense. This is often done through physics-based algorithms. They may postulate a repulsive force among nodes, and an attractive force among edges, so that nodes that have a lot of connections are drawn further together, while those that have fewer connections are drawn further apart. Going into the workings of visualization algorithms are beyond the scope of this work as it blends into a completely different disciplinary area altogether.\n",
     "\n",
-    "Here we provide a simple visualization for the drone laws dataset. As we expect, it shows that regulation 2019R0945 stands at the center of the network. This is what we should expect given our experimental design, as this as one of the regulations that served as a source from which other laws were identified."
+    "Here we provide a simple visualization for the drone laws dataset. As we expect, it shows that regulation 2019R0945 stands at the centre of the network. This is what we should expect given our experimental design, as this as one of the regulations that served as a source from which other laws were identified."
    ]
   },
   {
@@ -369,7 +369,7 @@
     "\n",
     "Our drone legislation example is also a DAG. It is directed, because one law cites another, it is acyclic, because more recent legislation cites less recent legislation and not the other way around, and it is a graph that consists of nodes and edges.\n",
     "\n",
-    "DAGs are particularly important in the modeling of causal processes, on the understanding that causation is always linear and undirectional. To illustrate, we draw a toy example of a casual model that predicts a country will ratify a free trade treaty if the country is democratic, has a liberal government, has high unemployment, and a high percentage of young citizens. The supposed effect in this model is directional and not cyclic (once the free trade treaty is ratified, this does not, in turn, make it more likely that democracy will prevail). This work does not delve further into DAGs as such."
+    "DAGs are particularly important in the modelling of causal processes, on the understanding that causation is always linear and undirectional. To illustrate, we draw a toy example of a casual model that predicts a country will ratify a free trade treaty if the country is democratic, has a liberal government, has high unemployment, and a high percentage of young citizens. The supposed effect in this model is directional and not cyclic (once the free trade treaty is ratified, this does not, in turn, make it more likely that democracy will prevail). This work does not delve further into DAGs as such."
    ]
   },
   {
