--- a/book/content/Chapter_2_Key_Concepts.ipynb
+++ b/book/content/Chapter_2_Key_Concepts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "dd3db348",
    "metadata": {
     "ExecuteTime": {
@@ -47,7 +47,7 @@
    "source": [
     "## 2.1 Nodes & Edges\n",
     "\n",
-    "Networks consist of two key elements: nodes and edges. Nodes are the smallest unit in a network. As indicated above, nodes can represent various types of entities: individuals, court cases, documents, words, etc. Edges are the links between two nodes. In our drone example, drone laws would be the nodes, whereas one law citing another law would constitute an edge.\n",
+    "Networks consist of two key elements: nodes and edges. Nodes are the smallest unit in a network. As indicated above, nodes can represent various types of entities: individuals, court cases, documents, words, etc. Edges are the links between two nodes. In our drone example, drone laws would be the nodes, whereas one law citing another law would constitute an edge between those nodes.\n",
     "\n",
     "Nodes can also be called vertices (singular: vertex). Edges are sometimes called lines or arcs. We will stick to 'nodes' and 'edges' throughout this book, as these are the most commonly used terms in legal network analysis."
    ]
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "## 2.2 Undirected networks versus directed networks\n",
-    "Networks (and graphs) can be directed or undirected. Directed networks record a non-reciprocal relationship. For instance, A sends a message to B, C admires D, or E cites F. The drone legislation example is a directed network. Some statute A citing another statute B does not in any way imply that B should cite A.\n",
+    "Networks (and graphs) can be directed or undirected. Directed networks record a non-reciprocal relationship. For instance, A sends a message to B, C admires D, or E cites F. The drone legislation network that we are using as an example is a directed network. Some statute A citing another statute B does not in any way imply that B should cite A.\n",
     "\n",
     "<img src=\"images/ch1/directed_graph.png\" alt=\"drawing\" width=\"150\"/>"
    ]
@@ -80,7 +80,7 @@
    "source": [
     "## 2.3 Network Visualization\n",
     "\n",
-    "Networks (like graphs) do not have a fixed visual representation. A network can be represented in a variety of different ways, all of them equally good from a purely formal perspective. However, not every visual representation will be equally useful.  The three plots below represent the exact same network (image from Wallis 2007, page 7). If one asks \"which node is the most central one?\" in relation to this particular network, the drawing on the left probably provides us the most insight and the one on the right is highly misleading (all the nodes in this network are equally central).\n",
+    "Networks (like graphs) do not have a fixed visual representation. A network can be represented in a variety of different ways, all of them equally good from a purely formal perspective. However, not every visual representation will be equally useful.  The three plots below represent the exact same network of 4 fully connected nodes (image from Wallis 2007, page 7). If one asks \"which node is the most central one?\" in relation to this particular network, the drawing on the left probably provides us the most insight and the one on the right is highly misleading (all the nodes in this network are equally central).\n",
     "\n",
     "![image](images/ch1/equivalent_viz.png)\n",
     "\n"
@@ -91,7 +91,7 @@
    "id": "a7d12633cf209d98",
    "metadata": {},
    "source": [
-    "In order to provide an insightful visual representation of network it is necessary to order nodes in space in a way that makes sense. This is often done through physics-based algorithms. They may postulate a repulsive force among nodes, and an attractive force among edges, so that nodes that have a lot of connections are drawn further together, while those that have fewer connections are drawn further apart. Going into the workings of visualization algorithms are beyond the scope of this work as it blends into a completely different disciplinary area altogether.\n",
+    "In order to provide an insightful visual representation of network it is necessary to order nodes in space in a way that makes sense. This is often done through physics-based algorithms. They may postulate a repulsive force among nodes, and an attractive force among edges, so that nodes that have a lot of connections are drawn further together, while those that have fewer connections are drawn further apart. Going into the workings of visualization algorithms are beyond the scope of this work as it leans into a completely different skillset (for reference on two of the most popular algorithms see Fruchterman & Reingold, 1991 and Kamada, & Kawai, 1989).\n",
     "\n",
     "Here we provide a simple visualization for the drone laws dataset. As we expect, it shows that regulation 2019R0945 stands at the center of the network. This is what we should expect given our experimental design, as this as one of the regulations that served as a source from which other laws were identified."
    ]
@@ -1268,16 +1268,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
